Fri Mar 31 10:56:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Timer_List_T.cpp:
          Use prefix increment instead of postfix

        * ace/Timer_Hash_T.cpp:
          Initialise pointer with 0

        * ace/Reactor_Token_T.h:
          Converted some documentation to doxygen style

        * ace/Log_Record.cpp:
          Initialise some pointers with 0, made some local variables const.

        * ace/IOStream_T.h:
          Fixed some doxygen warnings

Fri Mar 31 08:33:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/compiler.bor:
          Added CPU_FLAG as possible flag, this can be -3/-4/-5/-6 to optimize
          things for a certain CPU, see the Borland help for more info what
          these flags do. When this is set, this is passed to the compiler

        * ACE-INSTALL.html:
          Document CPU_FLAG for Borland

        * ace/config-win32-borland.h:
          The Borland compiler can't handle assembly in inline methods or
          template methods. We do have inline assembly when building for
          pentium, so when we inlining enabled and do build for pentium
          we set ACE_LACKS_INLINE_ASSEMBLY to disable the inline assembly.
          Thanks to Steve Orner <saorner at rdainc dot com> for reporting
          this.

Thu Mar 30 21:03:27 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/Event_Handler.cpp (read_adapter):

          Fixed typo introduced in

          Thu Mar 30 10:24:50 2006  Douglas C. Schmidt  <schmidt@cse.wustl.edu>

Thu Mar 30 10:24:50 2006  Douglas C. Schmidt  <schmidt@cse.wustl.edu>

        * ace/Event_Handler.cpp (read_adapter): It was possible for
          handle_close() to "delete this" so we need to cache the reactor
           pointer and use it here.  Thanks to Yuan <yuanhp_china at
           hotmail dot com> for this fix.

Thu Mar 30 18:51:13 UTC 2006  Steve Huston  <shuston@riverace.com>
