@@ -1,3 +1,11 @@
+Fri Mar 31 11:41:54 UTC 2006  Steve Huston  <shuston@riverace.com>
+
+        * ace/OS_NS_Thread.h:
+        * ace/OS_NS_Thread.inl:
+        * ace/Recursive_Thread_Mutex.cpp: Reverted changes from
+          Thu Mar 30 18:51:13 UTC 2006  Steve Huston  <shuston@riverace.com>
+          because they broke builds on many platforms.
+
 Fri Mar 31 10:56:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/Timer_List_T.cpp:
@@ -45,8 +53,8 @@ Thu Mar 30 10:24:50 2006  Douglas C. Schmidt  <schmidt@cse.wustl.edu>
 
         * ace/Event_Handler.cpp (read_adapter): It was possible for
           handle_close() to "delete this" so we need to cache the reactor
-           pointer and use it here.  Thanks to Yuan <yuanhp_china at
-           hotmail dot com> for this fix.
+          pointer and use it here.  Thanks to Yuan <yuanhp_china at
+          hotmail dot com> for this fix.
 
 Thu Mar 30 18:51:13 UTC 2006  Steve Huston  <shuston@riverace.com>
 
